--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.h2.console.path=/console
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:C:/Users/izebr/Downloads/application-todo/application-todo/todo-app-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
