--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,5 @@ spring:
     driverClassName: org.h2.Driver
     username: sa
     password:
-my.prop: 'test'
+task:
+  allowMultipleTasksFromTemplate: false
