--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,3 +11,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
